Fix tooltip hidden by container [skip ci]

--- a/src/onegov/quill/assets/css/custom.css
+++ b/src/onegov/quill/assets/css/custom.css
@@ -3,6 +3,7 @@
     margin-bottom: 1em;
     margin-top: 3em;
     min-height: 100%;
+    position: static;
 }
 
 .ql-snow.ql-toolbar button,
@@ -27,7 +28,6 @@
     line-height: 1.6em;
     margin-bottom: 1em;
 }
-
 
 .ql-toolbar {
    position: absolute;
